Changed the Title

--- a/Day8/pseudo.html
+++ b/Day8/pseudo.html
@@ -3,7 +3,7 @@
 
 <head>
 
-    <title>pseudo</title>
+    <title>Git Tutorial</title>
 
     <link rel="stylesheet" href="./assets/css/pseudo.css">
 
